@@ -762,6 +762,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8816. Improve visualization for the Datanode tab in the NN UI. (wheat9)
 
+    HDFS-7192. DN should ignore lazyPersist hint if the writer is
+    not local. (Arpit Agarwal)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
